--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "boom": "^7.3.0",
     "fastify": "^3.11.0",
     "fastify-cors": "^5.2.0",
+    "fastify-healthcheck": "^3.0.0",
     "fastify-websocket": "^3.0.0",
     "mongoose": "^5.11.13",
     "node-cache": "^5.1.2",
