--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "boom": "^7.3.0",
+    "ethers": "^5.0.31",
     "fastify": "^3.11.0",
     "fastify-cors": "^5.2.0",
     "fastify-healthcheck": "^3.0.0",
